# autonomous_strawberry_harvester_ROS2

./: .gitignore  readme.md
src/ashr_gazebo/: CMakeLists.txt  package.xml
src/ashr_gazebo/config/: bridge.yaml
src/ashr_gazebo/meshes/: kinect.dae
src/ashr_gazebo/worlds/: ashr_world.sdf
src/esp_vision/: CMakeLists.txt  package.xml
src/esp_vision/include/esp_vision/: camera_component.hpp  inference_component.hpp  kinect_component.hpp  visibility_control.h
src/esp_vision/models/: model.onnx
src/esp_vision/src/: camera_component.cpp  inference_component.cpp  kinect_component.cpp
src/motion_planning/: package.xml  setup.py
src/motion_planning/motion_planning/: motion_planner.py  util.py
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  probot_anno.ros2_control.xacro  probot_anno.srdf  probot_anno.urdf  probot_anno.urdf.xacro  probot_joy_config.yaml  probot_servo_config copy.yaml  probot_servo_config.yaml  ros2_controllers.yaml
src/moveit_config/config/probot_anno/: probot_anno.usd
src/moveit_config/config/probot_anno/configuration/: probot_anno_physics.usd  probot_anno_sensor.usd
src/moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  probot_bringup.launch.py  probot_servo.launch.py  rsp.launch.py  setup_assistant.launch.py  sim.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/probot_bringup/: package.xml  setup.cfg  setup.py
src/probot_bringup/launch/: hardware_demo.launch.py  probot_bringup.launch.py
src/probot_description/: CMakeLists.txt  package.xml  urdf.rviz
src/probot_description/launch/: publish_robot_description.launch.py  rviz_launch.launch.py
src/probot_description/meshes/: Active_Blade_Link.STL  Active_Gear_Link.STL  Passive_Blade_Link.STL  Passive_Gear_Link.STL  container_link.STL  finger1.STL  finger2.STL  finger3.STL
src/probot_description/urdf/: gripper.xacro  gripper_description.urdf  gripper_macro.xacro  probot.ros2_control.xacro  probot_anno.urdf  probot_anno.xacro  probot_anno_macro.xacro
src/probot_gazebo/: CMakeLists.txt  package.xml
src/probot_gazebo/launch/: moveit_gazebo.launch.py  sim.launch.py
src/probot_hardware/: CMakeLists.txt  package.xml  probot_hardware.xml
src/probot_hardware/include/probot_hardware/: probot_system.hpp
src/probot_hardware/src/: probot_system.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/include/vision/: camera_component.hpp  inference_component.hpp  kinect_component.hpp  visibility_control.h
src/vision/launch/: esp_vision.launch.py
src/vision/src/: camera_component.cpp  inference_component.cpp  kinect_component.cpp
