<?xml version="1.0"?>
<package format="3">
  <name>probot_description</name>
  <version>0.0.0</version>
  <description>The probot_description package</description>

  <maintainer email="youssef.nagy073@gmail.com">Chunxu Hu</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
